# pyqode.core

./: .gitignore  AUTHORS.rst  README.rst  conftest.py  pyproject.toml  pytest.ini  setup.py  stdeb.cfg
.github/workflows/: publish-package.yaml
examples/encodings/: common.py  detect.py  dialog.py  error.py  menu.py  panel.py
examples/modes/: autocomplete.py  autoindent.py  caret_line_highlighter_with_syntax_highlighter.py  caret_line_highlighter_without_syntax_highlighter.py  case_converter.py  checker.py  code_completion_frontend.py  extended_selections.py  filewatcher.py  indenter.py  occurences.py  pygments_syntax_highlighter.py  right_margin.py  smart_backspace.py  symbol_matcher.py  zoom.py
examples/panels/: checker.py  folding.py  global_checker.py  line_numbers.py  search_and_replace.py
examples/simple/: basic.py  custom_actions.py  style_and_settings.py
examples/widgets/: errors_table.py  filesystem_treeview.py  generic_code_edit.py  output_window.py  splittable_codeedit_tab_widget.py  splittable_tab_widget.py  terminal.py
pyqode/core/: __init__.py  cache.py  icons.py
test/: helpers.py
test/test_api/: test_code_edit.py  test_decoration.py  test_extension.py  test_folding.py  test_text.py  test_utils.py
test/test_managers/: test_backend.py  test_file_manager.py
test/test_modes/: test_autocomplete.py  test_autoindent.py  test_backspace.py  test_caret_line_highlight.py  test_checker.py  test_code_completion.py  test_extended_selection.py  test_filewatcher.py  test_indenter.py  test_matcher.py  test_occurrences.py  test_pygments_highlighter.py  (+3 more)
(+56 files in other folders)
